Fixing issue with hero h1 on small displays

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,9 @@ HOMEPAGE
       line-height: 1.1em;
       text-transform: none;
       word-spacing: 0;
+      @media screen and (max-width: 523px) {
+        font-size: 2.7em;
+      }
     }
     h2 {
       color: #777;
